@@ -221,6 +221,9 @@ Other Changes
 
 * SOLR-6804: Untangle SnapPuller and ReplicationHandler (Ramkumar Aiyengar)
 
+* SOLR-7180: MiniSolrCloudCluster will startup and shutdown its jetties in
+  parallel (Alan Woodward, Tomás Fernández Löbbe, Vamsee Yarlagadda)
+
 ==================  5.0.0 ==================
 
 Consult the LUCENE_CHANGES.txt file for additional, low level, changes in this release.
